--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,17 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 0 30px 0;
 }
 
+.tags_h2 {
+  font-family: "Merriweather, Roboto";
+  font-weight: 700
+}
+
+.tags_list {
+    -webkit-column-count: 4; /* Chrome, Safari, Opera */
+    -moz-column-count: 4; /* Firefox */
+    column-count: 4;
+}
+
 figure {
   margin-bottom: 2.5em;
   float: left;
